--- a/AnimeHubClient/Pages/Anime/AnimeCatalog.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeCatalog.razor
@@ -1,4 +1,4 @@
-﻿@page "/anime-catalog"
+﻿@page "/animes"
 @using AnimeHub.Shared.Models.Dtos
 @using Microsoft.AspNetCore.WebUtilities
 @inject HttpClient Http
