--- a/AnimeHubClient/Pages/Anime/AnimeUpsert.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeUpsert.razor
@@ -1,5 +1,5 @@
-﻿@page "/anime/create"
-@page "/anime/update/{Id:int}"
+﻿@page "/admin/animes/create"
+@page "/admin/animes/update/{Id:int}"
 @using AnimeHub.Shared.Models.Dtos.Anime
 @using AnimeHub.Shared.Models.Dtos.Category
 @using AnimeHub.Shared.Models.Dtos.Genre
