--- a/AnimeHubClient/Pages/Category/CategoryUpsert.razor
+++ b/AnimeHubClient/Pages/Category/CategoryUpsert.razor
@@ -1,5 +1,5 @@
-﻿@page "/category/create"
-@page "/category/update/{Id:int}"
+﻿@page "/admin/categories/create"
+@page "/admin/categories/update/{Id:int}"
 @using AnimeHub.Shared.Models.Dtos.Category
 @inject HttpClient Http
 @inject NavigationManager Navigation
