--- a/AnimeHubClient/Layout/NavBar.razor
+++ b/AnimeHubClient/Layout/NavBar.razor
@@ -8,7 +8,7 @@
     <div class="container">
         <!-- Brand -->
         <a class="navbar-brand d-flex align-items-center" href="/">
-            <img src="/images/Anime-Hub.svg" loading="lazy" alt="AnimeHub" height="45" class="me-2" />
+            <img src="/images/Logo.svg" loading="lazy" alt="AnimeHub" height="45" class="me-2" />
         </a>
 
         <!-- Mobile Toggle -->
