--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -19,7 +19,7 @@
 
                     <div class="hero-cta">
                         @* Replacing Bootstrap Buttons with MudButtons for consistency *@
-                        <MudButton Href="anime-catalog"
+                        <MudButton Href="animes"
                                    Variant="Variant.Filled"
                                    Color="Color.Primary"
                                    Size="Size.Large"
