Implemented Anime Details Page

--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -12,7 +12,7 @@
         @* --- 1. HERO SECTION (Using MudCarousel) --- *@
         <MudItem xs="12">
             <div style="position:relative; height:84vh;">
-                <MudCarousel Class="mud-carousel-custom" Style="height:84vh" AutoCycle="true" TData="object">
+                <MudCarousel Class="mud-carousel-custom" Style="height:84vh" NextIcon="@Icons.Material.Outlined.ArrowCircleRight" PreviousIcon="@Icons.Material.Filled.ArrowCircleLeft" ShowArrows="true" AutoCycle="true" TData="object">
                     <MudCarouselItem Transition="Transition.Fade">
                         <div class="hero-image-overlay" style="background-image: url('/images/hero1.jpg');"></div>
                     </MudCarouselItem>
