Implemented user ratings api

--- a/AnimeHubClient/Pages/Anime/AnimeDetail.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeDetail.razor
@@ -39,7 +39,7 @@ else
                     <MudListItem Icon="@Icons.Material.Filled.Update">
                         <MudText Typo="Typo.subtitle1" Class="fw-bold">Status:</MudText> @Anime.Status
                     </MudListItem>
-                    <MudListItem Icon="@Icons.Material.Filled.MovieFilter">
+                    <MudListItem Icon="@Icons.Material.Filled.CameraRoll">
                         <MudText Typo="Typo.subtitle1" Class="fw-bold">Studios:</MudText>
                         @if (Anime.Studios != null && Anime.Studios.Any())
                         {
